css fixes: margin deleted on multiple classNames to control weird scrolling on mobile; disabled text highlight; some minor searchability fixes to index.html

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,16 @@ h1, h2, h3, p{
 body::-webkit-scrollbar{
   display: none;
 }
+body{
+  user-select: none; /* supported by Chrome and Opera */
+   -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+   -moz-user-select: none; /* Firefox */
+   -ms-user-select: none; /* Internet Explorer/Edge */
+}
+html, body, :root, .left, .right, .top, .down, .mainContainer, .constellationPanel, .databasePanel, .databaseLanding, .databaseInfo{
+  margin: 0;
+}
 
 /*CURSORS*/
 *{
